# reserva-app

./: .gitignore  Procfile  database-migration.sql  main.py  pyproject.toml  requeriments.txt  requirements.txt
reserva_app/: __init__.py  app.py  models teste.py  models.py
reserva_app/static/css/: styles.css
reserva_app/static/db/: model.py  reserva.csv  sala.csv  user.csv
reserva_app/templates/: base-content-form.html  base-content-view.html  base-registro.html  base.html  cadastrar-sala.html  cadastro.html  detalhe-reserva.html  editar-sala.html  listar-salas.html  login.html  reservar-sala.html  reservas.html
tests/: models teste.py
