[tool.poetry]
name = "reserva-app"
version = "0.1.0"
description = ""
authors = ["Domingos Lucas <domingos.latorre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
